--- a/dashboard/src/styles/index.scss
+++ b/dashboard/src/styles/index.scss
@@ -1,73 +1,6 @@
-@import "~muicss/lib/sass/mui-colors.scss";
+@import url('https://fonts.googleapis.com/css?family=Spicy+Rice:regular,bold,italic&subset=latin,latin-ext');
 
-$mui-primary-color: mui-color('black');
-
-@import "~muicss/lib/sass/mui.scss";
-
-html {
-  font-size: 100%;
-  height: 100%;
-  padding: 0px;
-  margin: 0px;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-body {
-  height: 100%;
-  padding: 0px;
-  margin: 0px;
-}
-
-#app {
-  height: 100%;
-}
-
-.wipe-button {
-  height: 50px;
-  svg {
-    font-size: 30px;
-  }
-}
-
-.mui-appbar {
-    svg {
-        max-height: 100%;
-        float: left;
-    }
-    h1 {
-        font-size: 1.5rem;
-    }
-
-    .mui-btn--flat {
-        color: white;
-    }
-}
-
-.app-loader {
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    svg {
-        margin: auto;
-        margin-top: 3rem;
-    }
-}
-
-.messages {
-  .message {
-    border-bottom: .1rem dashed #333;
-    padding: .5rem;
-    margin-bottom: 1rem;
-    .updated-time {
-      font-size: .5rem;
-    }
-  }
-}
-
-.application-settings, .user, .messages {
-    margin-top: 3rem;
+.wi {
+    font-size: 7rem;
+    margin: 2rem 0;
 }
